# Voice-Agent

./: .gitignore  README.md
agents/: .env.example  README.md  pyproject.toml
agents/app/: main.py
agents/app/config/: settings.py
agents/app/voice_agent/: agent.py
ingestion/: .env.example  pyproject.toml
ingestion/app/: main.py
ingestion/app/api/: api_endpoints.py
ingestion/app/api/endpoints/: ingest.py
ingestion/app/config/: settings.py
ingestion/app/schema/: ingestion.py
ingestion/app/service/: base_ingestion.py  ingestion_factory.py  qdrant_service.py
ingestion/app/service/pdf/: service.py
ingestion/app/service/url/: service.py
ingestion/app/utils/: comman_utilis.py
tools/: .env.example  README.md  pyproject.toml
tools/app/: main.py
tools/app/api/: ingestion_api.py
tools/app/config/: settings.py
