[project]
name = "app"
version = "0.1.0"
description = "A simple voice bot ingestion service"
authors = [
    {name = "Jeyaraman",email = "119618019+RoboJunior@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "validators (>=0.35.0,<0.36.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "qdrant-client[fastembed] (>=1.15.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "crawl4ai (>=0.7.4,<0.8.0)"
]

[tool.poetry.scripts]
create_new_collection = "app.service.qdrant_service:create_new_qdrant_collection"
ingestion_service = "app.main:start_ingestion_service"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
